--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>API</title>
   </head>
   <body>
-    <p>API is deployed. Try <code>/.netlify/functions/api/health</code>.</p>
+    <p>All the APIs are deployed. </p>  <code>Thanks! </code>.</p>
   </body>
 </html>
+
